@@ -9,8 +9,8 @@ public interface IDemoService {
      *
      * @return Value for property 'listOfAvailableFLVs'.
      */
-    public Map getListOfAvailableFLVs();
+    public Map<String, Map<String, Object>> getListOfAvailableFLVs();
 
-    public Map getListOfAvailableFLVs(String string);
+    public Map<String, Map<String, Object>> getListOfAvailableFLVs(String string);
 
 }
